--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.28",
+    "@types/express": "^4.17.11",
+    "@types/highlight.js": "^10.1.0",
+    "@types/jest": "^26.0.22",
+    "@types/marked": "^2.0.1",
     "@types/node": "^14.14.37",
+    "i": "^0.3.6",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
+    "highlight.js": "^10.7.1",
     "markd": "^1.2.0"
   }
 }
