--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "tsc": "tsc",
     "test": "jest",
-    "app": "tsc && node dist/app.js"
+    "build:scss": "sass ./resources/app.scss:./dist/app.css",
+    "build": "tsc & sass resources/app.scss dist/resources/app.css",
+    "app": "npm run build & node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "@types/node": "^14.14.37",
     "i": "^0.3.6",
     "jest": "^26.6.3",
+    "sass": "^1.32.8",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
